Composite pattern commit